gcc/testsuite/rust/rustc/ui/parser/issues/issue-114219_dg.rs
fn main() {
    async move {};
// { dg-error "" "" { target *-*-* } .-1 }
}

